--- a/page2.html
+++ b/page2.html
@@ -183,12 +183,6 @@
       <div class="chocolate-chip"></div>
     </div>
 
-    <div class="upgrade-line">
-      <p>Upgrade clicks:</p>
-      <button class="upgrade-button" id="upgradeButton">10 🍪</button>
-    </div>
-  </div>
-
   <!-- Shop GUI -->
   <div class="gui" id="storeGUI">
     <h2>Store</h2>
@@ -238,6 +232,9 @@
           if (!db.objectStoreNames.contains('scores')) {
             db.createObjectStore('scores', { keyPath: 'id' });
           }
+          if (!db.objectStoreNames.contains('upgrades')) {
+            db.createObjectStore('upgrades', { keyPath: 'id' });
+          }
         };
       });
     }
@@ -259,28 +256,41 @@
       store.put({ id: 1, value });
     }
 
-    async function incrementScore() {
-      score += clickBonus + 1; // Add the bonus for each click
-      document.getElementById('score').textContent = score;
-      await updateScore(score);
-
-      const circle = document.querySelector('.click-circle');
-      circle.style.transform = 'scale(1.1)';
-      setTimeout(() => circle.style.transform = 'scale(1)', 100);
+    async function getUpgrades() {
+      const db = await openDatabase();
+      const transaction = db.transaction('upgrades', 'readonly');
+      const store = transaction.objectStore('upgrades');
+      const request = store.get(1);
+      return new Promise((resolve) => {
+        request.onsuccess = () => resolve(request.result ? request.result.value : { hasPurchased: false });
+      });
     }
 
     async function applyUpgrade() {
-      if (score >= 10) {
+      const upgrades = await getUpgrades();
+
+      if (!upgrades.hasPurchased && score >= 10) {
         score -= 10;
         clickBonus++;
         document.getElementById('score').textContent = score;
         await updateScore(score);
+
+        upgrades.hasPurchased = true;
+        const db = await openDatabase();
+        const transaction = db.transaction('upgrades', 'readwrite');
+        const store = transaction.objectStore('upgrades');
+        store.put({ id: 1, value: upgrades });
       }
     }
 
     async function initialize() {
       score = await getScore();
       document.getElementById('score').textContent = score;
+
+      const upgrades = await getUpgrades();
+      if (upgrades.hasPurchased) {
+        document.getElementById('shopUpgradeButton').disabled = true;
+      }
     }
 
     function toggleGUI(guiId) {
