--- a/page2.html
+++ b/page2.html
@@ -182,6 +182,7 @@
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
     </div>
+  </div>
 
   <!-- Shop GUI -->
   <div class="gui" id="storeGUI">
@@ -249,21 +250,21 @@
       const store = transaction.objectStore('scores');
       const request = store.get(1);
       return new Promise((resolve) => {
-        request.onsuccess = () => resolve(request.result ? request.result : { score: 0, clickBonus: 0, incrementBonus: 0 });
+        request.onsuccess = () => resolve(request.result ? request.result : { score: 0, clickBonus: 0 });
       });
     }
 
-    async function updateScore(score, clickBonus, incrementBonus) {
+    async function updateScore(score, clickBonus) {
       const db = await openDatabase();
       const transaction = db.transaction('scores', 'readwrite');
       const store = transaction.objectStore('scores');
-      store.put({ id: 1, score, clickBonus, incrementBonus });
+      store.put({ id: 1, score, clickBonus });
     }
 
     async function incrementScore() {
       score += clickBonus; // Add the bonus for each click
       document.getElementById('score').textContent = score;
-      await updateScore(score, clickBonus, incrementBonus); // Save new score in IndexedDB
+      await updateScore(score, clickBonus); // Save new score and click bonus in IndexedDB
 
       const circle = document.querySelector('.click-circle');
       circle.style.transform = 'scale(1.1)';
@@ -276,7 +277,7 @@
         score -= price;
         clickBonus++;
         document.getElementById('score').textContent = score;
-        await updateScore(score, clickBonus, incrementBonus); // Save new score in IndexedDB
+        await updateScore(score, clickBonus); // Save new score and click bonus in IndexedDB
       }
     }
 
@@ -286,15 +287,14 @@
         score -= price;
         incrementBonus++;
         document.getElementById('score').textContent = score;
-        await updateScore(score, clickBonus, incrementBonus); // Save new score in IndexedDB
+        await updateScore(score, clickBonus); // Save new score and click bonus in IndexedDB
       }
     }
 
     async function initialize() {
       const data = await getScore();
       score = data.score;
-      clickBonus = data.clickBonus;
-      incrementBonus = data.incrementBonus;
+      clickBonus = data.clickBonus; // Load saved clickBonus
       document.getElementById('score').textContent = score;
     }
 
