--- a/page2.html
+++ b/page2.html
@@ -313,7 +313,7 @@
     }
 
     let score = 0;
-    let clickBonus = 0; // Track the bonus clicks
+    let clickBonus = 1; // Initialize click bonus to 1
     let incrementBonus = 0; // Track the increment bonus
     initialize();
 
