--- a/page2.html
+++ b/page2.html
@@ -18,7 +18,7 @@
       height: 100vh;
       font-family: Arial, sans-serif;
       color: white;
-      overflow: hidden; /* Prevent scrolling */
+      overflow: hidden;
     }
 
     .counter-box {
@@ -42,7 +42,7 @@
     .click-circle {
       width: 300px;
       height: 300px;
-      background-color: #8B4513; /* Cookie color */
+      background-color: #8B4513;
       border-radius: 50%;
       position: relative;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
@@ -55,10 +55,10 @@
 
     .chocolate-chip {
       position: absolute;
-      background-color: #3E2723; /* Dark chocolate color */
+      background-color: #3E2723;
       border-radius: 50%;
-      pointer-events: none; /* Prevent chips from triggering events */
-      box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5); /* White fading inside the chips */
+      pointer-events: none;
+      box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5);
     }
 
     .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
@@ -78,10 +78,10 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0); /* Fully transparent background */
+      background: rgba(0, 0, 0, 0);
       display: none;
-      z-index: 9; /* Lower z-index to prevent overlap with other elements */
-      pointer-events: none; /* Allow interaction with elements behind it */
+      z-index: 9;
+      pointer-events: none;
     }
 
     .gui {
@@ -170,7 +170,6 @@
 
   <div class="game-container">
     <div class="click-circle" onclick="incrementScore()">
-      <!-- Chocolate chips -->
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
@@ -182,51 +181,27 @@
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
     </div>
+
+    <div class="upgrade-line">
+      <p>Upgrade clicks:</p>
+      <button class="upgrade-button" id="upgradeButton">10 🍪</button>
+    </div>
   </div>
 
-  <!-- Shop GUI -->
   <div class="gui" id="storeGUI">
     <h2>Store</h2>
     <p>Buy upgrades and items here!</p>
     <div class="upgrade-line">
       <div>
         <p>clicks</p>
-        <p>+1 cookie per click</p>
-      </div>
-      <button class="upgrade-button" id="shopClickUpgradeButton">10 🍪</button>
-    </div>
-    <div class="upgrade-line">
-      <div>
-        <p>clicks</p>
         <p>plus one cookie per click</p>
       </div>
-      <button class="upgrade-button" id="shopIncrementUpgradeButton">10 🍪</button>
+      <button class="upgrade-button" id="shopUpgradeButton">10 🍪</button>
     </div>
-  </div>
-
-  <!-- Special GUI -->
-  <div class="gui" id="specialGUI">
-    <h2>Special</h2>
-    <p>Special events and items.</p>
-  </div>
-
-  <!-- Stats GUI -->
-  <div class="gui" id="statsGUI">
-    <h2>Stats</h2>
-    <p>Check your progress here.</p>
-  </div>
-
-  <!-- Misc GUI -->
-  <div class="gui" id="miscGUI">
-    <h2>Misc</h2>
-    <p>Extra settings and options.</p>
   </div>
 
   <footer>
     <button class="footer-button" onclick="toggleGUI('storeGUI')">Store</button>
-    <button class="footer-button" onclick="toggleGUI('specialGUI')">Special</button>
-    <button class="footer-button" onclick="toggleGUI('statsGUI')">Stats</button>
-    <button class="footer-button" onclick="toggleGUI('miscGUI')">Misc</button>
   </footer>
 
   <script>
@@ -250,51 +225,53 @@
       const store = transaction.objectStore('scores');
       const request = store.get(1);
       return new Promise((resolve) => {
-        request.onsuccess = () => resolve(request.result ? request.result : { score: 0, clickBonus: 0 });
+        request.onsuccess = () => resolve(request.result ? request.result.value : 0);
       });
     }
 
-    async function updateScore(score, clickBonus) {
+    async function updateScore(value) {
       const db = await openDatabase();
       const transaction = db.transaction('scores', 'readwrite');
       const store = transaction.objectStore('scores');
-      store.put({ id: 1, score, clickBonus });
+      store.put({ id: 1, value });
+    }
+
+    async function getClickBonus() {
+      const db = await openDatabase();
+      const transaction = db.transaction('scores', 'readonly');
+      const store = transaction.objectStore('scores');
+      const request = store.get(2);
+      return new Promise((resolve) => {
+        request.onsuccess = () => resolve(request.result ? request.result.value : 0);
+      });
+    }
+
+    async function updateClickBonus(value) {
+      const db = await openDatabase();
+      const transaction = db.transaction('scores', 'readwrite');
+      const store = transaction.objectStore('scores');
+      store.put({ id: 2, value });
     }
 
     async function incrementScore() {
-      score += clickBonus; // Add the bonus for each click
+      score += clickBonus + 1;
       document.getElementById('score').textContent = score;
-      await updateScore(score, clickBonus); // Save new score and click bonus in IndexedDB
-
-      const circle = document.querySelector('.click-circle');
-      circle.style.transform = 'scale(1.1)';
-      setTimeout(() => circle.style.transform = 'scale(1)', 100);
+      await updateScore(score);
     }
 
-    async function applyUpgradeClickBonus() {
-      const price = 10; // Price of the upgrade
-      if (score >= price) {
-        score -= price;
+    async function applyUpgrade() {
+      if (score >= 10) {
+        score -= 10;
         clickBonus++;
         document.getElementById('score').textContent = score;
-        await updateScore(score, clickBonus); // Save new score and click bonus in IndexedDB
-      }
-    }
-
-    async function applyIncrementUpgrade() {
-      const price = 10; // Price of the upgrade
-      if (score >= price) {
-        score -= price;
-        incrementBonus++;
-        document.getElementById('score').textContent = score;
-        await updateScore(score, clickBonus); // Save new score and click bonus in IndexedDB
+        await updateScore(score);
+        await updateClickBonus(clickBonus);
       }
     }
 
     async function initialize() {
-      const data = await getScore();
-      score = data.score;
-      clickBonus = data.clickBonus; // Load saved clickBonus
+      score = await getScore();
+      clickBonus = await getClickBonus();
       document.getElementById('score').textContent = score;
     }
 
@@ -313,13 +290,10 @@
     }
 
     let score = 0;
-    let clickBonus = 1; // Initialize click bonus to 1
-    let incrementBonus = 0; // Track the increment bonus
+    let clickBonus = 0;
     initialize();
 
-    // Add event listener to the shop upgrade buttons
-    document.getElementById('shopClickUpgradeButton').addEventListener('click', applyUpgradeClickBonus);
-    document.getElementById('shopIncrementUpgradeButton').addEventListener('click', applyIncrementUpgrade);
+    document.getElementById('shopUpgradeButton').addEventListener('click', applyUpgrade);
   </script>
 </body>
 </html>
