--- a/page2.html
+++ b/page2.html
@@ -3,173 +3,102 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cookie Clicker Game</title>
+  <title>Page 2</title>
   <style>
     body {
-      background-image: linear-gradient(to bottom, #00509E, #001F54);
+      background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('https://source.unsplash.com/1600x900/?nature,water');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      margin: 0;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-      height: 100vh;
-      font-family: Arial, sans-serif;
-      color: white;
-      overflow: hidden;
-    }
-
-    .counter-box {
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      text-align: center;
-      padding: 10px;
-      font-size: 1.5em;
-      font-weight: bold;
-      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
-    }
-
-    .game-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-      flex-grow: 1;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      color: white;
+      text-align: center;
     }
-
-    .click-circle {
-      width: 300px;
-      height: 300px;
-      background-color: #8B4513;
-      border-radius: 50%;
-      position: relative;
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+    .buttons-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+    .buttons-container button {
+      padding: 8px 12px;
+      border: none;
+      border-radius: 5px;
+      background-color: #007bff;
+      color: white;
+      font-size: 12px;
       cursor: pointer;
-      transition: transform 0.1s ease-in-out;
-      outline: none;
-      user-select: none;
-      -webkit-tap-highlight-color: transparent;
     }
-
-    .chocolate-chip {
-      position: absolute;
-      background-color: #3E2723;
-      border-radius: 50%;
-      pointer-events: none;
-      box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5);
+    .buttons-container button:hover {
+      background-color: #0056b3;
     }
-
-    .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
-    .chocolate-chip:nth-child(2) { width: 22px; height: 22px; top: 50%; left: 60%; }
-    .chocolate-chip:nth-child(3) { width: 28px; height: 28px; top: 75%; left: 45%; }
-    .chocolate-chip:nth-child(4) { width: 20px; height: 20px; top: 60%; left: 15%; }
-    .chocolate-chip:nth-child(5) { width: 24px; height: 24px; top: 15%; left: 70%; }
-    .chocolate-chip:nth-child(6) { width: 25px; height: 25px; top: 40%; left: 30%; }
-    .chocolate-chip:nth-child(7) { width: 18px; height: 18px; top: 65%; left: 75%; }
-    .chocolate-chip:nth-child(8) { width: 26px; height: 26px; top: 35%; left: 55%; }
-    .chocolate-chip:nth-child(9) { width: 20px; height: 20px; top: 85%; left: 25%; }
-    .chocolate-chip:nth-child(10) { width: 15px; height: 15px; top: 25%; left: 50%; }
-
-    .dim-background {
+    .redirect-button {
+      display: block;
+      margin-top: 20px;
+      text-align: center;
+      background-color: #007bff;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 14px;
+      text-decoration: none;
+    }
+    .redirect-button:hover {
+      background-color: #0056b3;
+    }
+    footer {
       position: absolute;
-      top: 0;
-      left: 0;
+      bottom: 10px;
       width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0);
-      display: none;
-      z-index: 9;
-      pointer-events: none;
     }
-
-    .gui {
+    .game-container {
       position: absolute;
       top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 80%;
-      height: 60%;
-      background-color: rgba(255, 255, 255, 0.9);
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
-      display: none;
-      z-index: 20;
-      border-radius: 10px;
-      padding: 20px;
-      text-align: center;
-      color: black;
-    }
-
-    .upgrade-line {
-      border-top: 1px solid black;
-      margin-top: 20px;
-      padding-top: 10px;
+      transform: translateY(-50%);
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: space-between;
     }
-
-    .upgrade-line p {
-      margin: 0;
-    }
-
-    .upgrade-line p:first-child {
-      font-weight: bold;
-      text-transform: uppercase;
-    }
-
-    .upgrade-button {
-      padding: 5px 15px;
-      background-color: #00509E;
-      color: white;
-      border: none;
+    .click-circle {
+      width: 100px;
+      height: 100px;
+      background-color: #8B4513; /* Brown color */
+      border-radius: 50%;
       cursor: pointer;
-      font-size: 1em;
-      border-radius: 5px;
+      margin-bottom: 20px;
+      position: relative;
+      transition: transform 0.1s ease-in-out;
     }
-
-    .upgrade-button:hover {
-      background-color: #003f7a;
-    }
-
-    footer {
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      padding: 10px 0;
-      box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.5);
+    .chocolate-chip {
       position: absolute;
-      bottom: 0;
+      background-color: #3E2723; /* Dark brown color */
+      border-radius: 50%;
+      transition: transform 0.1s ease-in-out;
     }
-
-    .footer-button {
-      color: white;
-      background: transparent;
-      border: none;
-      font-size: 1em;
-      font-weight: bold;
-      cursor: pointer;
-      text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
-    }
-
-    .footer-button:hover {
-      text-decoration: underline;
-    }
+    .chocolate-chip:nth-child(1) { width: 15px; height: 15px; top: 20%; left: 20%; }
+    .chocolate-chip:nth-child(2) { width: 12px; height: 12px; top: 30%; left: 60%; }
+    .chocolate-chip:nth-child(3) { width: 18px; height: 18px; top: 50%; left: 40%; }
+    .chocolate-chip:nth-child(4) { width: 14px; height: 14px; top: 70%; left: 30%; }
+    .chocolate-chip:nth-child(5) { width: 16px; height: 16px; top: 80%; left: 70%; }
+    .chocolate-chip:nth-child(6) { width: 13px; height: 13px; top: 60%; left: 80%; }
+    .chocolate-chip:nth-child(7) { width: 17px; height: 17px; top: 40%; left: 10%; }
+    .chocolate-chip:nth-child(8) { width: 14px; height: 14px; top: 20%; left: 80%; }
+    .chocolate-chip:nth-child(9) { width: 15px; height: 15px; top: 10%; left: 50%; }
+    .chocolate-chip:nth-child(10) { width: 12px; height: 12px; top: 30%; left: 10%; }
   </style>
 </head>
 <body>
 
-  <div class="dim-background" id="dimBackground"></div>
-
-  <div class="counter-box">
-    <span id="score">0</span> cookies
-  </div>
-
   <div class="game-container">
     <div class="click-circle" onclick="incrementScore()">
+      <!-- Chocolate chips -->
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
@@ -181,119 +110,35 @@
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
     </div>
-
-    <div class="upgrade-line">
-      <p>Upgrade clicks:</p>
-      <button class="upgrade-button" id="upgradeButton">10 🍪</button>
-    </div>
+    <div class="score" id="score">0</div>
   </div>
 
-  <div class="gui" id="storeGUI">
-    <h2>Store</h2>
-    <p>Buy upgrades and items here!</p>
-    <div class="upgrade-line">
-      <div>
-        <p>clicks</p>
-        <p>plus one cookie per click</p>
-      </div>
-      <button class="upgrade-button" id="shopUpgradeButton">10 🍪</button>
-    </div>
+  <div class="download-button-container">
+    <a href="https://www.mediafire.com/file/your-download-link" class="download-button">Download</a>
   </div>
 
-  <footer>
-    <button class="footer-button" onclick="toggleGUI('storeGUI')">Store</button>
-  </footer>
+  <!-- New Button at the bottom of the page -->
+  <a href="index.html" class="redirect-button">Go back to Main Page</a>
 
   <script>
-    async function openDatabase() {
-      const request = indexedDB.open('cookieClickerDB', 1);
-      return new Promise((resolve, reject) => {
-        request.onerror = () => reject(request.error);
-        request.onsuccess = () => resolve(request.result);
-        request.onupgradeneeded = (event) => {
-          const db = event.target.result;
-          if (!db.objectStoreNames.contains('scores')) {
-            db.createObjectStore('scores', { keyPath: 'id' });
-          }
-        };
-      });
-    }
-
-    async function getScore() {
-      const db = await openDatabase();
-      const transaction = db.transaction('scores', 'readonly');
-      const store = transaction.objectStore('scores');
-      const request = store.get(1);
-      return new Promise((resolve) => {
-        request.onsuccess = () => resolve(request.result ? request.result.value : 0);
-      });
-    }
-
-    async function updateScore(value) {
-      const db = await openDatabase();
-      const transaction = db.transaction('scores', 'readwrite');
-      const store = transaction.objectStore('scores');
-      store.put({ id: 1, value });
-    }
-
-    async function getClickBonus() {
-      const db = await openDatabase();
-      const transaction = db.transaction('scores', 'readonly');
-      const store = transaction.objectStore('scores');
-      const request = store.get(2);
-      return new Promise((resolve) => {
-        request.onsuccess = () => resolve(request.result ? request.result.value : 0);
-      });
-    }
-
-    async function updateClickBonus(value) {
-      const db = await openDatabase();
-      const transaction = db.transaction('scores', 'readwrite');
-      const store = transaction.objectStore('scores');
-      store.put({ id: 2, value });
-    }
-
-    async function incrementScore() {
-      score += clickBonus + 1;
-      document.getElementById('score').textContent = score;
-      await updateScore(score);
-    }
-
-    async function applyUpgrade() {
-      if (score >= 10) {
-        score -= 10;
-        clickBonus++;
-        document.getElementById('score').textContent = score;
-        await updateScore(score);
-        await updateClickBonus(clickBonus);
-      }
-    }
-
-    async function initialize() {
-      score = await getScore();
-      clickBonus = await getClickBonus();
-      document.getElementById('score').textContent = score;
-    }
-
-    function toggleGUI(guiId) {
-      const gui = document.getElementById(guiId);
-      const dimBackground = document.getElementById('dimBackground');
-      const isVisible = gui.style.display === 'block';
-
-      document.querySelectorAll('.gui').forEach(gui => gui.style.display = 'none');
-      dimBackground.style.display = 'none';
-
-      if (!isVisible) {
-        gui.style.display = 'block';
-        dimBackground.style.display = 'block';
-      }
-    }
-
     let score = 0;
-    let clickBonus = 0;
-    initialize();
 
-    document.getElementById('shopUpgradeButton').addEventListener('click', applyUpgrade);
+    function incrementScore() {
+      score++;
+      document.getElementById('score').textContent = score;
+      // Apply shrink effect
+      const circle = document.querySelector('.click-circle');
+      circle.style.transform = 'scale(0.9)';
+      setTimeout(() => {
+        circle.style.transform = 'scale(1)';
+      }, 100);
+    }
   </script>
+
+  <!-- Credit Section -->
+  <footer>
+    <p>Website created by <strong>Hyperturret</strong></p>
+  </footer>
+
 </body>
 </html>
