--- a/page2.html
+++ b/page2.html
@@ -101,6 +101,38 @@
       color: black;
     }
 
+    .upgrade-line {
+      border-top: 1px solid black;
+      margin-top: 20px;
+      padding-top: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .upgrade-line p {
+      margin: 0;
+    }
+
+    .upgrade-line p:first-child {
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+
+    .upgrade-button {
+      padding: 5px 15px;
+      background-color: #00509E;
+      color: white;
+      border: none;
+      cursor: pointer;
+      font-size: 1em;
+      border-radius: 5px;
+    }
+
+    .upgrade-button:hover {
+      background-color: #003f7a;
+    }
+
     footer {
       width: 100%;
       background-color: rgba(0, 0, 0, 0.5);
@@ -133,7 +165,7 @@
   <div class="dim-background" id="dimBackground"></div>
 
   <div class="counter-box">
-    <span id="score">0</span> cookies
+    <span id="score">10</span> cookies
   </div>
 
   <div class="game-container">
@@ -152,18 +184,39 @@
     </div>
   </div>
 
+  <!-- Shop GUI -->
   <div class="gui" id="storeGUI">
     <h2>Store</h2>
     <p>Buy upgrades and items here!</p>
+    <div class="upgrade-line">
+      <div>
+        <p>clicks</p>
+        <p>+1 cookie per click</p>
+      </div>
+      <button class="upgrade-button" id="shopClickUpgradeButton">10 🍪</button>
+    </div>
+    <div class="upgrade-line">
+      <div>
+        <p>clicks</p>
+        <p>plus one cookie per click</p>
+      </div>
+      <button class="upgrade-button" id="shopIncrementUpgradeButton">10 🍪</button>
+    </div>
   </div>
+
+  <!-- Special GUI -->
   <div class="gui" id="specialGUI">
     <h2>Special</h2>
     <p>Special events and items.</p>
   </div>
+
+  <!-- Stats GUI -->
   <div class="gui" id="statsGUI">
     <h2>Stats</h2>
     <p>Check your progress here.</p>
   </div>
+
+  <!-- Misc GUI -->
   <div class="gui" id="miscGUI">
     <h2>Misc</h2>
     <p>Extra settings and options.</p>
@@ -178,10 +231,10 @@
 
   <script>
     async function openDatabase() {
+      const request = indexedDB.open('cookieClickerDB', 1);
       return new Promise((resolve, reject) => {
-        const request = indexedDB.open('cookieClickerDB', 1);
-        request.onerror = (event) => reject(event.target.error);
-        request.onsuccess = (event) => resolve(event.target.result);
+        request.onerror = () => reject(request.error);
+        request.onsuccess = () => resolve(request.result);
         request.onupgradeneeded = (event) => {
           const db = event.target.result;
           if (!db.objectStoreNames.contains('scores')) {
@@ -193,40 +246,55 @@
 
     async function getScore() {
       const db = await openDatabase();
-      return new Promise((resolve, reject) => {
-        const transaction = db.transaction('scores', 'readonly');
-        const store = transaction.objectStore('scores');
-        const request = store.get(1);
-        request.onsuccess = () => resolve(request.result ? request.result.value : 0);
-        request.onerror = () => reject(request.error);
+      const transaction = db.transaction('scores', 'readonly');
+      const store = transaction.objectStore('scores');
+      const request = store.get(1);
+      return new Promise((resolve) => {
+        request.onsuccess = () => resolve(request.result ? request.result : { score: 10, clickBonus: 0 });
       });
     }
 
-    async function updateScore(value) {
+    async function updateScore(score, clickBonus) {
       const db = await openDatabase();
-      return new Promise((resolve, reject) => {
-        const transaction = db.transaction('scores', 'readwrite');
-        const store = transaction.objectStore('scores');
-        const request = store.put({ id: 1, value });
-        request.onsuccess = () => resolve();
-        request.onerror = () => reject(request.error);
-      });
+      const transaction = db.transaction('scores', 'readwrite');
+      const store = transaction.objectStore('scores');
+      store.put({ id: 1, score, clickBonus });
     }
 
     async function incrementScore() {
-      score++;
+      score += clickBonus; // Add the bonus for each click
       document.getElementById('score').textContent = score;
-      await updateScore(score);
+      await updateScore(score, clickBonus); // Save new score and click bonus in IndexedDB
 
       const circle = document.querySelector('.click-circle');
       circle.style.transform = 'scale(1.1)';
-      setTimeout(() => {
-        circle.style.transform = 'scale(1)';
-      }, 100);
+      setTimeout(() => circle.style.transform = 'scale(1)', 100);
+    }
+
+    async function applyUpgradeClickBonus() {
+      const price = 10; // Price of the upgrade
+      if (score >= price) {
+        score -= price;
+        clickBonus++;
+        document.getElementById('score').textContent = score;
+        await updateScore(score, clickBonus); // Save new score and click bonus in IndexedDB
+      }
+    }
+
+    async function applyIncrementUpgrade() {
+      const price = 10; // Price of the upgrade
+      if (score >= price) {
+        score -= price;
+        incrementBonus++;
+        document.getElementById('score').textContent = score;
+        await updateScore(score, clickBonus); // Save new score and click bonus in IndexedDB
+      }
     }
 
     async function initialize() {
-      score = await getScore();
+      const data = await getScore();
+      score = data.score;
+      clickBonus = data.clickBonus; // Load saved clickBonus
       document.getElementById('score').textContent = score;
     }
 
@@ -244,8 +312,14 @@
       }
     }
 
-    let score = 0;
+    let score = 10;
+    let clickBonus = 1; // Initialize click bonus to 1
+    let incrementBonus = 0; // Track the increment bonus
     initialize();
+
+    // Add event listener to the shop upgrade buttons
+    document.getElementById('shopClickUpgradeButton').addEventListener('click', applyUpgradeClickBonus);
+    document.getElementById('shopIncrementUpgradeButton').addEventListener('click', applyIncrementUpgrade);
   </script>
 </body>
 </html>
