--- a/page2.html
+++ b/page2.html
@@ -18,7 +18,7 @@
       height: 100vh;
       font-family: Arial, sans-serif;
       color: white;
-      overflow: hidden;
+      overflow: hidden; /* Prevent scrolling */
     }
 
     .counter-box {
@@ -42,7 +42,7 @@
     .click-circle {
       width: 300px;
       height: 300px;
-      background-color: #8B4513;
+      background-color: #8B4513; /* Cookie color */
       border-radius: 50%;
       position: relative;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
@@ -55,10 +55,10 @@
 
     .chocolate-chip {
       position: absolute;
-      background-color: #3E2723;
+      background-color: #3E2723; /* Dark chocolate color */
       border-radius: 50%;
-      pointer-events: none;
-      box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5);
+      pointer-events: none; /* Prevent chips from triggering events */
+      box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5); /* White fading inside the chips */
     }
 
     .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
@@ -78,10 +78,10 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0);
+      background: rgba(0, 0, 0, 0); /* Fully transparent background */
       display: none;
-      z-index: 9;
-      pointer-events: none;
+      z-index: 9; /* Lower z-index to prevent overlap with other elements */
+      pointer-events: none; /* Allow interaction with elements behind it */
     }
 
     .gui {
@@ -170,6 +170,7 @@
 
   <div class="game-container">
     <div class="click-circle" onclick="incrementScore()">
+      <!-- Chocolate chips -->
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
@@ -182,12 +183,7 @@
       <div class="chocolate-chip"></div>
     </div>
 
-    <div class="upgrade-line">
-      <p>Upgrade clicks:</p>
-      <button class="upgrade-button" id="upgradeButton">10 🍪</button>
-    </div>
-  </div>
-
+  <!-- Shop GUI -->
   <div class="gui" id="storeGUI">
     <h2>Store</h2>
     <p>Buy upgrades and items here!</p>
@@ -200,8 +196,29 @@
     </div>
   </div>
 
+  <!-- Special GUI -->
+  <div class="gui" id="specialGUI">
+    <h2>Special</h2>
+    <p>Special events and items.</p>
+  </div>
+
+  <!-- Stats GUI -->
+  <div class="gui" id="statsGUI">
+    <h2>Stats</h2>
+    <p>Check your progress here.</p>
+  </div>
+
+  <!-- Misc GUI -->
+  <div class="gui" id="miscGUI">
+    <h2>Misc</h2>
+    <p>Extra settings and options.</p>
+  </div>
+
   <footer>
     <button class="footer-button" onclick="toggleGUI('storeGUI')">Store</button>
+    <button class="footer-button" onclick="toggleGUI('specialGUI')">Special</button>
+    <button class="footer-button" onclick="toggleGUI('statsGUI')">Stats</button>
+    <button class="footer-button" onclick="toggleGUI('miscGUI')">Misc</button>
   </footer>
 
   <script>
@@ -236,27 +253,14 @@
       store.put({ id: 1, value });
     }
 
-    async function getClickBonus() {
-      const db = await openDatabase();
-      const transaction = db.transaction('scores', 'readonly');
-      const store = transaction.objectStore('scores');
-      const request = store.get(2);
-      return new Promise((resolve) => {
-        request.onsuccess = () => resolve(request.result ? request.result.value : 0);
-      });
-    }
-
-    async function updateClickBonus(value) {
-      const db = await openDatabase();
-      const transaction = db.transaction('scores', 'readwrite');
-      const store = transaction.objectStore('scores');
-      store.put({ id: 2, value });
-    }
-
     async function incrementScore() {
-      score += clickBonus + 1;
+      score += clickBonus + 1; // Add the bonus for each click
       document.getElementById('score').textContent = score;
       await updateScore(score);
+
+      const circle = document.querySelector('.click-circle');
+      circle.style.transform = 'scale(1.1)';
+      setTimeout(() => circle.style.transform = 'scale(1)', 100);
     }
 
     async function applyUpgrade() {
@@ -265,13 +269,11 @@
         clickBonus++;
         document.getElementById('score').textContent = score;
         await updateScore(score);
-        await updateClickBonus(clickBonus);
       }
     }
 
     async function initialize() {
       score = await getScore();
-      clickBonus = await getClickBonus();
       document.getElementById('score').textContent = score;
     }
 
@@ -290,9 +292,10 @@
     }
 
     let score = 0;
-    let clickBonus = 0;
+    let clickBonus = 0; // Track the bonus clicks
     initialize();
 
+    // Add event listener to the shop upgrade button
     document.getElementById('shopUpgradeButton').addEventListener('click', applyUpgrade);
   </script>
 </body>
