--- a/page2.html
+++ b/page2.html
@@ -1,307 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cookie Clicker Game</title>
-  <style>
-    body {
-      background-image: linear-gradient(to bottom, #00509E, #001F54);
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-      height: 100vh;
-      font-family: Arial, sans-serif;
-      color: white;
-      overflow: hidden;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cookie Clicker</title>
+    <style>
+        /* General Styling */
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f7f7f7;
+            margin: 0;
+            padding: 0;
+        }
 
-    .counter-box {
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      text-align: center;
-      padding: 10px;
-      font-size: 1.5em;
-      font-weight: bold;
-      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
-    }
+        #gameContainer {
+            margin: 50px auto;
+            padding: 20px;
+            max-width: 400px;
+            border: 2px solid #ccc;
+            border-radius: 10px;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
 
-    .game-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      flex-grow: 1;
-    }
+        /* Button Styles */
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
 
-    .click-circle {
-      width: 300px;
-      height: 300px;
-      background-color: #8B4513;
-      border-radius: 50%;
-      position: relative;
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
-      cursor: pointer;
-      transition: transform 0.1s ease-in-out;
-      outline: none;
-      user-select: none;
-      -webkit-tap-highlight-color: transparent;
-    }
+        #clickButton {
+            background-color: #4caf50; /* Green */
+            color: white;
+        }
 
-    .chocolate-chip {
-      position: absolute;
-      background-color: #3E2723;
-      border-radius: 50%;
-      pointer-events: none;
-      box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5);
-    }
+        #clickButton:hover {
+            background-color: #45a049;
+        }
 
-    .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
-    .chocolate-chip:nth-child(2) { width: 22px; height: 22px; top: 50%; left: 60%; }
-    .chocolate-chip:nth-child(3) { width: 28px; height: 28px; top: 75%; left: 45%; }
-    .chocolate-chip:nth-child(4) { width: 20px; height: 20px; top: 60%; left: 15%; }
-    .chocolate-chip:nth-child(5) { width: 24px; height: 24px; top: 15%; left: 70%; }
-    .chocolate-chip:nth-child(6) { width: 25px; height: 25px; top: 40%; left: 30%; }
-    .chocolate-chip:nth-child(7) { width: 18px; height: 18px; top: 65%; left: 75%; }
-    .chocolate-chip:nth-child(8) { width: 26px; height: 26px; top: 35%; left: 55%; }
-    .chocolate-chip:nth-child(9) { width: 20px; height: 20px; top: 85%; left: 25%; }
-    .chocolate-chip:nth-child(10) { width: 15px; height: 15px; top: 25%; left: 50%; }
+        /* Misc GUI Styling */
+        .miscGUI {
+            margin-top: 20px;
+        }
 
-    .dim-background {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0);
-      display: none;
-      z-index: 9;
-      pointer-events: none;
-    }
+        .miscGUI button {
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: #ff4444; /* Red for reset */
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
 
-    .gui {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 80%;
-      height: 60%;
-      background-color: rgba(255, 255, 255, 0.9);
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
-      display: none;
-      z-index: 20;
-      border-radius: 10px;
-      padding: 20px;
-      text-align: center;
-      color: black;
-    }
-
-    .upgrade-line {
-      border-top: 1px solid black;
-      margin-top: 20px;
-      padding-top: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    .upgrade-line p {
-      margin: 0;
-    }
-
-    .upgrade-line p:first-child {
-      font-weight: bold;
-      text-transform: uppercase;
-    }
-
-    .upgrade-button {
-      padding: 5px 15px;
-      background-color: #00509E;
-      color: white;
-      border: none;
-      cursor: pointer;
-      font-size: 1em;
-      border-radius: 5px;
-    }
-
-    .upgrade-button:hover {
-      background-color: #003f7a;
-    }
-
-    footer {
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      padding: 10px 0;
-      box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.5);
-      position: absolute;
-      bottom: 0;
-    }
-
-    .footer-button {
-      color: white;
-      background: transparent;
-      border: none;
-      font-size: 1em;
-      font-weight: bold;
-      cursor: pointer;
-      text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
-    }
-
-    .footer-button:hover {
-      text-decoration: underline;
-    }
-  </style>
+        .miscGUI button:hover {
+            background-color: #cc0000; /* Darker red on hover */
+        }
+    </style>
 </head>
 <body>
-
-  <div class="dim-background" id="dimBackground"></div>
-
-  <div class="counter-box">
-    <span id="score">0</span> cookies
-  </div>
-
-  <div class="game-container">
-    <div class="click-circle" onclick="incrementScore()">
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
+    <div id="gameContainer">
+        <h1>Cookie Clicker</h1>
+        <p>Score: <span id="scoreDisplay">0</span></p>
+        <button id="clickButton">Click Me!</button>
     </div>
-  </div>
-
-  <footer>
-    <button class="footer-button" onclick="toggleGUI('storeGUI')">Store</button>
-    <button class="footer-button" onclick="toggleGUI('miscGUI')">Misc</button>
-  </footer>
-
-  <div class="gui" id="storeGUI">
-    <h2>Store</h2>
-    <div class="upgrade-line">
-      <p>Upgrade clicks:</p>
-      <button class="upgrade-button" id="upgradeButton">10 🍪</button>
+    <div class="miscGUI">
+        <button onclick="resetProgress()">Reset Progress</button>
     </div>
-  </div>
 
-  <div class="gui" id="miscGUI">
-    <h2>Misc Options</h2>
-    <button class="upgrade-button" onclick="resetProgress()">Reset Progress</button>
-  </div>
+    <script>
+        // Variables
+        let score = 0;
+        let clickBonus = 1;
 
-  <script>
-    let score = 0;
-    let clickBonus = 0;
+        // Function to update score display
+        function updateScoreDisplay() {
+            const scoreDisplay = document.getElementById("scoreDisplay");
+            scoreDisplay.textContent = score;
+        }
 
-    async function openDatabase() {
-      const request = indexedDB.open('cookieClickerDB', 1);
-      return new Promise((resolve, reject) => {
-        request.onerror = () => reject(request.error);
-        request.onsuccess = () => resolve(request.result);
-        request.onupgradeneeded = (event) => {
-          const db = event.target.result;
-          if (!db.objectStoreNames.contains('scores')) {
-            db.createObjectStore('scores', { keyPath: 'id' });
-          }
+        // Function to handle button clicks
+        document.getElementById("clickButton").addEventListener("click", function () {
+            score += clickBonus;
+            updateScoreDisplay();
+            saveProgress(); // Save the score after every click
+        });
+
+        // IndexedDB Setup
+        const dbRequest = indexedDB.open("cookieClickerDB", 1);
+
+        dbRequest.onupgradeneeded = function (event) {
+            const db = event.target.result;
+            db.createObjectStore("scores", { keyPath: "id" });
         };
-      });
-    }
 
-    async function getScore() {
-      const db = await openDatabase();
-      const transaction = db.transaction('scores', 'readonly');
-      const store = transaction.objectStore('scores');
-      const request = store.get(1);
-      return new Promise((resolve) => {
-        request.onsuccess = () => resolve(request.result ? request.result.value : 0);
-      });
-    }
+        dbRequest.onsuccess = function (event) {
+            const db = event.target.result;
 
-    async function updateScore(value) {
-      const db = await openDatabase();
-      const transaction = db.transaction('scores', 'readwrite');
-      const store = transaction.objectStore('scores');
-      store.put({ id: 1, value });
-    }
+            // Load saved progress
+            const transaction = db.transaction(["scores"], "readonly");
+            const store = transaction.objectStore("scores");
+            const getRequest = store.get(1);
 
-    async function getClickBonus() {
-      const db = await openDatabase();
-      const transaction = db.transaction('scores', 'readonly');
-      const store = transaction.objectStore('scores');
-      const request = store.get(2);
-      return new Promise((resolve) => {
-        request.onsuccess = () => resolve(request.result ? request.result.value : 0);
-      });
-    }
+            getRequest.onsuccess = function () {
+                if (getRequest.result) {
+                    score = getRequest.result.score || 0;
+                    clickBonus = getRequest.result.clickBonus || 1;
+                    updateScoreDisplay();
+                }
+            };
 
-    async function updateClickBonus(value) {
-      const db = await openDatabase();
-      const transaction = db.transaction('scores', 'readwrite');
-      const store = transaction.objectStore('scores');
-      store.put({ id: 2, value });
-    }
+            getRequest.onerror = function () {
+                console.error("Error loading progress.");
+            };
+        };
 
-    async function incrementScore() {
-      score += clickBonus + 1;
-      document.getElementById('score').textContent = score;
-      await updateScore(score);
-    }
+        dbRequest.onerror = function () {
+            console.error("Error opening database.");
+        };
 
-    async function applyUpgrade() {
-      if (score >= 10) {
-        score -= 10;
-        clickBonus++;
-        document.getElementById('score').textContent = score;
-        await updateScore(score);
-        await updateClickBonus(clickBonus);
-      }
-    }
+        // Save progress to IndexedDB
+        function saveProgress() {
+            const db = dbRequest.result;
 
-    async function resetProgress() {
-      score = 0;
-      clickBonus = 0;
-      document.getElementById('score').textContent = score;
-      await updateScore(score);
-      await updateClickBonus(clickBonus);
-      toggleGUI('miscGUI');
-      alert('Progress has been reset!');
-    }
+            if (db) {
+                const transaction = db.transaction(["scores"], "readwrite");
+                const store = transaction.objectStore("scores");
 
-    async function initialize() {
-      score = await getScore();
-      clickBonus = await getClickBonus();
-      document.getElementById('score').textContent = score;
-    }
+                const saveRequest = store.put({ id: 1, score: score, clickBonus: clickBonus });
+                saveRequest.onsuccess = function () {
+                    console.log("Progress saved.");
+                };
 
-    function toggleGUI(guiId) {
-      const gui = document.getElementById(guiId);
-      const dimBackground = document.getElementById('dimBackground');
-      const isVisible = gui.style.display === 'block';
+                saveRequest.onerror = function () {
+                    console.error("Error saving progress.");
+                };
+            }
+        }
 
-      document.querySelectorAll('.gui').forEach(gui => gui.style.display = 'none');
-      dimBackground.style.display = 'none';
+        // Reset progress function
+        function resetProgress() {
+            const db = dbRequest.result;
 
-      if (!isVisible) {
-        gui.style.display = 'block';
-        dimBackground.style.display = 'block';
-      }
-    }
+            if (db) {
+                const transaction = db.transaction(["scores"], "readwrite");
+                const store = transaction.objectStore("scores");
 
-    initialize();
+                const clearRequest = store.clear();
+                clearRequest.onsuccess = function () {
+                    console.log("Progress reset successfully!");
+                    score = 0; // Reset the score in memory
+                    clickBonus = 1; // Reset click bonus
+                    updateScoreDisplay();
+                };
 
-    document.getElementById('upgradeButton').addEventListener('click', applyUpgrade);
-  </script>
+                clearRequest.onerror = function () {
+                    console.error("Error resetting progress.");
+                };
+            }
+        }
+    </script>
 </body>
 </html>
