--- a/page2.html
+++ b/page2.html
@@ -61,6 +61,13 @@
       box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5);
     }
 
+    /* Positioning the chocolate chips */
+    .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
+    .chocolate-chip:nth-child(2) { width: 22px; height: 22px; top: 50%; left: 60%; }
+    .chocolate-chip:nth-child(3) { width: 28px; height: 28px; top: 75%; left: 45%; }
+    .chocolate-chip:nth-child(4) { width: 20px; height: 20px; top: 60%; left: 15%; }
+    .chocolate-chip:nth-child(5) { width: 24px; height: 24px; top: 15%; left: 70%; }
+
     .dim-background {
       position: absolute;
       top: 0;
@@ -117,17 +124,13 @@
     }
 
     .reset-button {
-      padding: 10px 20px;
-      background-color: #ff4444;
+      padding: 5px 15px;
+      background-color: red;
       color: white;
       border: none;
       font-size: 1em;
       border-radius: 5px;
       cursor: pointer;
-    }
-
-    .reset-button:hover {
-      background-color: #cc0000;
     }
   </style>
 </head>
@@ -143,6 +146,9 @@
     <div class="click-circle" onclick="incrementScore()">
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
     </div>
   </div>
 
@@ -151,9 +157,14 @@
     <p>Buy upgrades here!</p>
   </div>
 
-  <div class="gui" id="upgradesGUI">
-    <h2>Upgrades</h2>
-    <p>Upgrade details here!</p>
+  <div class="gui" id="specialGUI">
+    <h2>Special</h2>
+    <p>Special upgrades and bonuses will be displayed here!</p>
+  </div>
+
+  <div class="gui" id="statsGUI">
+    <h2>Stats</h2>
+    <p>Your game statistics will be shown here!</p>
   </div>
 
   <div class="gui" id="miscGUI">
@@ -164,7 +175,8 @@
 
   <footer>
     <button class="footer-button" onclick="toggleGUI('storeGUI')">Store</button>
-    <button class="footer-button" onclick="toggleGUI('upgradesGUI')">Upgrades</button>
+    <button class="footer-button" onclick="toggleGUI('specialGUI')">Special</button>
+    <button class="footer-button" onclick="toggleGUI('statsGUI')">Stats</button>
     <button class="footer-button" onclick="toggleGUI('miscGUI')">Misc</button>
   </footer>
 
